--- a/src/colors.css
+++ b/src/colors.css
@@ -2,6 +2,7 @@
     --ci-dark-blue: rgb(0, 4, 35);
     --ci-white: rgb(245, 245, 245);
     --ci-grey: rgb(101, 108, 134);
+    --ci-dark-grey: rgb(30, 31, 42);
     --ci-pink: rgb(244, 63, 184);
     --ci-pink-shade: rgb(167, 43, 126);
 
